-Admin order page changes
-Stock adjustment algorithm
-Price adjusting
-Fixes pricing

--- a/app/views/admin/deposits/_form.html.erb
+++ b/app/views/admin/deposits/_form.html.erb
@@ -58,7 +58,7 @@
       </div>
     </div>
     <div class="modal-footer">
-      <%= link_to "Cancel", "javascript:;", :class => "pull-left", :data => {:dismiss => 'modal'} %>
+      <%= link_to "Cancel", admin_deposits_path, :class => "pull-left", :data => {:dismiss => 'modal'} %>
       <%= f.submit "Save", :class => 'btn btn-primary' %>
     </div>
 <% end %>
