--- a/app/views/admin/orders/_line_items.html.erb
+++ b/app/views/admin/orders/_line_items.html.erb
@@ -5,20 +5,75 @@
     <thead>
     <tr>
       <th>Detail</th>
-      <th>Price</th>
       <th>Quantity</th>
       <th></th>
     </tr>
     </thead>
     <%= f.fields_for :line_items, f.object.line_items.blank? ? f.object.line_items.new : f.object.reload.line_items, wrapper: false do |li_form| %>
-        <tr class="fields">
-          <td><%= li_form.select :deposit_id, @deposits.collect { |l| ["#{l.display} - #{l.plant.species}", l.id] }, {}, disabled: !@order.pending? %></td>
-          <td><%= li_form.text_field :price, min: 0, disabled: !@order.pending? %></td>
-          <td><%= li_form.number_field :qty, min: 0, disabled: !@order.pending? %></td>
+        <tr class="item_fields fields">
+          <td><%= li_form.select :deposit_id, @deposits.collect { |l| ["#{l.display} - #{l.plant.species}", l.id, {total_quantity: l.total_quantity, level_1_price: l.plant.level_1_price, level_2_price: l.plant.level_2_price, level_3_price: l.plant.level_3_price}] }, {}, class: "deposit_select", disabled: !@order.pending? %></td>
+          <td>
+            <%= li_form.number_field :qty, min: 0, class: "grams", disabled: !@order.pending? %>
+            <br>
+            <span>Total Available Qty: <span class="available_quantity"></span></span>
+            <%= li_form.hidden_field :price, min: 0, class: "price", disabled: !@order.pending? %>
+          </td>
           <td><%= li_form.link_to_remove("x Remove") if @order.pending? %></td>
         </tr>
     <% end %>
   </table>
+  <table>
+    <tr>
+      <td colspan="2" style="text-align: right;">Total:</td>
+      <td colspan="1" class="total"></td>
+    </tr>
+  </table>
   <p><%= f.link_to_add("Add a item", :line_items, :data => {:target => "#line_items"}, class: "button button-success button-small") if @order.pending? %></p>
 </fieldset>
 
+<script type="text/javascript">
+    $(function () {
+        calculate_prices = function () {
+            var total = 0;
+            $.each($('.item_fields:visible'), function (i, el) {
+                var el = $(el);
+                var selected = el.find('.deposit_select').find('option:selected');
+                var grams = Number(el.find('.grams').val());
+                var price_field = el.find('.price');
+                var av_qty_field = el.find('.available_quantity');
+                av_qty_field.text(selected.attr('total_quantity'));
+
+                var price = 0;
+                if (grams > 0) {
+                    if (grams < 50) {
+                        price = Number(selected.attr('level_1_price')) * 0.001 * grams
+                        total += price
+                    }
+                    else if (grams < 500) {
+                        price = Number(selected.attr('level_2_price')) * 0.001 * grams
+                        total += price
+                    }
+                    else {
+                        price = Number(selected.attr('level_3_price')) * 0.001 * grams
+                        total += price
+                    }
+                }
+                price_field.val(price.toFixed(2));
+            });
+            $('.total').text("$ " + total.toFixed(2));
+            total = 0;
+        };
+        $(document).on('keyup', '.grams', calculate_prices);
+        $(document).on('change', '.deposit_select', calculate_prices);
+        calculate_prices();
+
+        $('#order_form').on('nested:fieldAdded', function (event) {
+            calculate_prices();
+        });
+        $('#order_form').on('nested:fieldRemoved', function (event) {
+            calculate_prices();
+        });
+
+
+    });
+</script>
