--- a/app/views/customer/order_forms/_nursery.html.erb
+++ b/app/views/customer/order_forms/_nursery.html.erb
@@ -47,7 +47,7 @@
   </div>
 </div>
 <div class="form-group">
-  <%= f.label :pon, class: "col-sm-2" %>
+  <%= f.label :pon, "PON", class: "col-sm-2" %>
   <div class="col-sm-8">
     <%= f.text_field :pon, class: "form-control" %>
   </div>
