--- a/app/views/admin/deposit_adjustments/_form.html.erb
+++ b/app/views/admin/deposit_adjustments/_form.html.erb
@@ -45,7 +45,7 @@
     </div>
 
     <div class="modal-footer">
-      <%= link_to "Cancel", "javascript:;", :class => "pull-left", :data => {:dismiss => 'modal'} %>
+      <%= link_to "Cancel", admin_deposit_adjustments_path, :class => "pull-left", :data => {:dismiss => 'modal'} %>
       <%= f.submit "Save", :class => 'btn btn-primary' %>
     </div>
 <% end %>
