--- a/app/views/admin/orders/_form.html.erb
+++ b/app/views/admin/orders/_form.html.erb
@@ -1,4 +1,4 @@
-<%= nested_form_for([:admin, @order]) do |f| %>
+<%= nested_form_for([:admin, @order], html: {id: "order_form"}) do |f| %>
     <%= render partial: "customer_data", locals: {f: f} %>
     <br>
     <%= render partial: "line_items", locals: {f: f} %>
