--- a/app/views/admin/plants/_form.html.erb
+++ b/app/views/admin/plants/_form.html.erb
@@ -15,7 +15,7 @@
       <div class="control-group">
         <%= f.label :price_paid, :class => 'control-label' %>
         <div class="controls">
-          <%= f.text_field :price_paid, :class => 'text_field change_level_prices' %>
+          <%= f.text_field :price_paid, value: ("%.2f" % f.object.price_paid.to_f), :class => 'text_field change_level_prices' %>
         </div>
       </div>
 
