Adds place an order link

--- a/app/views/customer/order_forms/_nursery.html.erb
+++ b/app/views/customer/order_forms/_nursery.html.erb
@@ -71,7 +71,7 @@
 
 <div class="form-group">
   <div class="col-sm-10">
-    <%= f.submit "Place Order", class: "btn btn-success pull-right" %>
+    <%= f.submit "Place Order", class: "btn btn-success pull-right", id: "action_button" %>
   </div>
 </div>
 
