--- a/app/assets/stylesheets/v2/application.css
+++ b/app/assets/stylesheets/v2/application.css
@@ -326,3 +326,40 @@ span.expand {
     padding-bottom: 8px;
     border-bottom: 1px solid #ccc;
 }
+
+#back_to_top.on {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    visibility: visible;
+    right: 25px;
+}
+#back_to_top {
+    bottom: 350px !important;
+}
+
+#back_to_top {
+    color: #cdcdcd;
+    height: auto;
+    position: fixed;
+    bottom: 65px;
+    margin: 0;
+    z-index: 10000;
+    -webkit-transition: all .3s ease 0s;
+    -moz-transition: all .3s ease 0s;
+    -o-transition: all .3s ease 0s;
+    transition: all .3s ease 0s;
+    right: 25px;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    visibility: hidden;
+    -webkit-backface-visibility: hidden;
+}
+#back_to_top span i {
+    font-size: 22px;
+    -webkit-transition: color .2s ease 0s;
+    -moz-transition: color .2s ease 0s;
+    -o-transition: color .2s ease 0s;
+    color: #b0b0b0;
+    line-height: 52px;
+}
+
