--- a/app/views/customer/order_forms/_items_for_nursery.html.erb
+++ b/app/views/customer/order_forms/_items_for_nursery.html.erb
@@ -1,4 +1,4 @@
-<table class="table table-bordered">
+<table class="table table-bordered" id="table-1">
   <thead>
 
   <tr>
@@ -39,6 +39,7 @@
   <% end %>
   </tbody>
 </table>
+<table class="table table-striped col-md-12" id="header-fixed"></table>
 
 <script>
     $(function () {
