--- a/app/views/admin/deposit_adjustments/_form.html.erb
+++ b/app/views/admin/deposit_adjustments/_form.html.erb
@@ -4,7 +4,7 @@
       <div class="control-group">
         <%= f.label :deposit, "FDA", :class => 'control-label' %>
         <div class="controls">
-          <%= f.select :deposit_id, Deposit.all.collect { |d| [d.display, d.id] } %>
+          <%= f.select :deposit_id, Deposit.with_eager_load.all.collect { |d| ["#{d.display} - #{d.plant.botanical_name}", d.id] } %>
         </div>
       </div>
 
