--- a/app/views/admin/orders/_customer_data.html.erb
+++ b/app/views/admin/orders/_customer_data.html.erb
@@ -21,7 +21,7 @@
     <div id="existing_customer_fields" class="field">
       <%= f.label :customer_id %>
       <br/>
-      <%= f.select :customer_id, Person::Customer.all.collect { |c| [c.full_name, c.id] }, {prompt: t(:please_select)}, disabled: !@order.pending? %>
+      <%= f.select :customer_id, Person::Customer.all.collect { |c| [c.full_name, c.id] }, {prompt: t(:please_select)}, class: "select2", disabled: !@order.pending? %>
       <br>
       <small>Save to see customer detail changes</small>
     </div>
