--- a/app/views/layouts/v2/admin/_navbar.html.erb
+++ b/app/views/layouts/v2/admin/_navbar.html.erb
@@ -26,6 +26,7 @@
     <li><%= link_to "Field Data Sheets", admin_deposits_path %></li>
     <li><%= link_to "Stock Adjustments", admin_deposit_adjustments_path %></li>
     <!--<li><%= link_to "Transactions", admin_transactions_path %></li>-->
+    <li><%= link_to "Settings", admin_settings_path %></li>
     <li><%= link_to "CMS", "/cms-admin", target: "_blank" %></li>
     <li>
       <a href="<%= destroy_user_session_path %>" data-method="delete"><i class="icon fa fa-sign-out"></i>Logout</a>
