--- a/app/views/admin/plants/_form.html.erb
+++ b/app/views/admin/plants/_form.html.erb
@@ -56,7 +56,7 @@
     </div>
 
     <div class="modal-footer">
-      <%= link_to "Cancel", "javascript:;", :class => "pull-left", :data => {:dismiss => 'modal'} %>
+      <%= link_to "Cancel", admin_plants_path, :class => "pull-left", :data => {:dismiss => 'modal'} %>
       <%= f.submit nil, :class => 'btn btn-primary' %>
     </div>
 <% end %>
