--- a/app/views/customer/order_forms/_seeding.html.erb
+++ b/app/views/customer/order_forms/_seeding.html.erb
@@ -66,7 +66,7 @@
     <%= f.text_field :grams_per_km, class: "form-control" %>
   </div>
 
-  <%= f.label :pon, class: "col-sm-2" %>
+  <%= f.label :pon, "PON", class: "col-sm-2" %>
   <div class="col-sm-3">
     <%= f.text_field :pon, class: "form-control" %>
   </div>
