--- a/app/views/home/_table.html.erb
+++ b/app/views/home/_table.html.erb
@@ -11,7 +11,7 @@
 
   <tr class="bold-black">
     <th>Lot No</th>
-    <th>Spa Name</th>
+    <th>SPA NAME</th>
     <th>Botanical Name</th>
     <th>Common Name</th>
     <th>Provenance</th>
