--- a/app/views/admin/deposit_adjustments/index.html.erb
+++ b/app/views/admin/deposit_adjustments/index.html.erb
@@ -47,6 +47,7 @@
     <th>Qty OnHold</th>
     <th>Qty Allocated</th>
     <th>User</th>
+    <th>Comment</th>
     <th><%= sort_link @search, :created_at %></th>
     <th><%= t '.actions', :default => t("helpers.actions") %></th>
   </tr>
@@ -62,6 +63,7 @@
         <td><%= deposit_adjustment.qty_onhold.to_f %></td>
         <td><%= deposit_adjustment.qty_allocated.to_f %></td>
         <td><%= deposit_adjustment.user.email rescue "N/A" %></td>
+        <td><%= deposit_adjustment.comment || "N/A" %></td>
         <td><%= deposit_adjustment.created_at.to_s(:long) %></td>
         <td>
           <%= link_to "Details",
