--- a/app/views/order_mailer/new_order_to_admin.text.erb
+++ b/app/views/order_mailer/new_order_to_admin.text.erb
@@ -12,6 +12,8 @@ DETAILS
     <% if li.qty.present? %>
     Quantity: <%= li.qty %>grams
     <% end %>
+    <% if li.price.present? %>
     Price: <%= number_to_currency li.price, precision: 2 %>
+    <% end %>
     ================================================================
 <% end %>
