--- a/app/views/order_mailer/notify_processed.text.erb
+++ b/app/views/order_mailer/notify_processed.text.erb
@@ -14,6 +14,8 @@ DETAILS
     <% if li.qty.present? %>
     Quantity: <%= li.qty %>grams
     <% end %>
+    <% if li.price.present? %>
     Price: <%= number_to_currency li.price, precision: 2 %>
+    <% end %>
     ================================================================
 <% end %>
